# scratch_db_system

./: .gitignore  CMakeLists.txt  Catalog.cc  Catalog.h  Comparison.cc  Comparison.h  ComplexKeyify.cc  ComplexKeyify.h  ComplexSwapify.cc  ComplexSwapify.h  Config.h  DBFile.cc  DBFile.h  EfficientMap.cc  EfficientMap.h  File.cc  File.h  Function.cc  Function.h  InefficientMap.cc  InefficientMap.h  Keyify.cc  Keyify.h  Notes.txt  ParseTree.h  QueryCompiler.cc  QueryCompiler.h  QueryLexer.l  QueryOptimizer.cc  QueryOptimizer.h  QueryParser.y  README.md  Record.cc  Record.h  RelOp.cc  RelOp.h  Schema.cc  Schema.h  Swap.h  Swapify.cc  (+9 more)
Files/: hj_results.txt
Queries_phase5/: 11.sql  13.sql  15.sql  16.sql  extra1.sql  extra2.sql  extra3.sql
Queries_phase6/: 1.sql  2.sql  3.sql  4.sql  5.sql
